plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'ru.nsu.fit.ykhdr'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.1'
    apacheCSVVersion = '1.10'
}

sourceCompatibility = "19.PREVIEW"
targetCompatibility = "19.PREVIEW"

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add("--enable-preview")
}

application {
    mainModule = 'ru.nsu.fit.ykhdr.smartupshark'
    mainClass = 'ru.nsu.fit.ykhdr.smartupshark.Main'
}

javafx {
    version = '19'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}



dependencies {
    implementation 'org.apache.commons:commons-csv:1.10.0'

    implementation('org.controlsfx:controlsfx:11.1.2')
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude(group: 'org.openjfx')
    }
    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
    implementation('com.github.almasb:fxgl:17.2') {
        exclude(group: 'org.openjfx')
    }

    implementation 'org.jetbrains:annotations:24.0.0'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

run {
    jvmArgs = ['--enable-preview']
}

jlink {
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}